app-deployment-test.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mule-app-canary
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: mule-app
        track: canary
    spec:
      containers:
      - image: vishalbiyani/mule-app:latest
        name: mule-app
        ports:
        - containerPort: 8081
          name: mule-app
