app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mule-app
  labels:
    app: mule-app
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mule-app
    spec:
      containers:
      - image: iipochi123/mule-esb
        name: mule-app
        ports:
        - containerPort: 8081
          name: mule-app
