app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mule-app
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: mule-app
