ingress-resource.yaml
 apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: test-ingress
 annotations:
   kubernetes.io/ingress.class: "istio"
spec:
  backend:
    serviceName: mule-ui
    servicePort: 8080
